@@ -76,7 +76,6 @@
 /test-bus-error
 /test-bus-gvariant
 /test-bus-introspect
-/test-bus-kernel-benchmark
 /test-bus-marshal
 /test-bus-match
 /test-bus-objects
